# sovereign-array

./: .gitignore  CMakeLists.txt  README.md  lakefile.lean  stress_test.sh
ArrayLang/: APLKernel.lean  Array.lean  Broadcast.lean  ConsistencyCheck.lean  Main.lean  NandAttention.lean  SimplexNorm.lean  Softmax.lean
hardware/: run_determinism_qemu.sh
include/: sovereign_array.h  sovereign_export.h
src/: main.cpp  sovereign_array.cpp  sovereign_export.cpp
test/: test.cpp
tests/: __init__.py  falsify_properties.py  np_attack.py
verification/: run_alive2_crucible.sh
